[gd_scene load_steps=12 format=3 uid="uid://sxradkvyaick"]

[ext_resource type="Script" path="res://dynamic/1_player/UI_Layer/BaseUI.gd" id="1_d5xhm"]
[ext_resource type="PackedScene" uid="uid://yqejq1wcj6a3" path="res://dynamic/1_player/UI_Layer/BaseUI/level/level.tscn" id="2_3ccr8"]
[ext_resource type="PackedScene" uid="uid://cibswvdy26rel" path="res://dynamic/1_player/UI_Layer/BaseUI/stopwatch/stopwatch.tscn" id="3_vtkmb"]
[ext_resource type="PackedScene" uid="uid://cswgkwsq8gfan" path="res://dynamic/1_player/UI_Layer/BaseUI/exp_bar/exp_bar.tscn" id="4_f8tba"]
[ext_resource type="PackedScene" uid="uid://fwq7tlftneu8" path="res://dynamic/1_player/UI_Layer/BaseUI/health_bar/health_bar.tscn" id="5_0wvht"]
[ext_resource type="PackedScene" uid="uid://dtljeado5ue3p" path="res://dynamic/1_player/UI_Layer/BaseUI/pause_panel/pause_panel.tscn" id="6_18qp5"]
[ext_resource type="PackedScene" uid="uid://bmljwk5vyd15y" path="res://dynamic/1_player/UI_Layer/BaseUI/death_panel/death_panel.tscn" id="7_koalu"]
[ext_resource type="PackedScene" uid="uid://cdqyecvpdyqhu" path="res://dynamic/1_player/UI_Layer/BaseUI/killcollect/killcount.tscn" id="8_8jnex"]
[ext_resource type="PackedScene" uid="uid://7hdonowfh837" path="res://dynamic/1_player/UI_Layer/BaseUI/goldcollect/goldcount.tscn" id="9_2dvgq"]
[ext_resource type="Script" path="res://dynamic/1_player/UI_Layer/SelectUI/SelectUI.gd" id="10_wikg1"]
[ext_resource type="PackedScene" uid="uid://j7kkv4b3ad6n" path="res://dynamic/1_player/UI_Layer/SelectUI/SelectUI.tscn" id="11_2v7aq"]

[node name="UI_Layer" type="CanvasLayer"]

[node name="BaseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d5xhm")

[node name="Level" parent="BaseUI" instance=ExtResource("2_3ccr8")]
layout_mode = 0
offset_top = 14.0
offset_right = 25.0
offset_bottom = 37.0

[node name="Stopwatch" parent="BaseUI" instance=ExtResource("3_vtkmb")]
layout_mode = 0
offset_left = 560.0
offset_top = 25.0
offset_right = 659.0
offset_bottom = 64.0
scale = Vector2(0.991197, 1.04129)

[node name="Exp_Bar" parent="BaseUI" instance=ExtResource("4_f8tba")]
layout_mode = 1
offset_top = 1.79385
offset_right = 1199.0
offset_bottom = 13.7938
auto_translate = false

[node name="Health_Bar" parent="BaseUI" instance=ExtResource("5_0wvht")]
layout_mode = 0
offset_left = 584.0
offset_top = 408.0
offset_right = 639.0
offset_bottom = 411.0

[node name="PausePanel" parent="BaseUI" instance=ExtResource("6_18qp5")]
process_mode = 3
layout_mode = 1
offset_left = 344.0
offset_top = 64.0
offset_right = 872.0
offset_bottom = 562.0

[node name="Pause" parent="BaseUI/PausePanel" index="0"]
offset_left = 157.0
offset_top = 47.0
offset_right = 381.0
offset_bottom = 94.0

[node name="Menu" parent="BaseUI/PausePanel" index="1"]
offset_left = 192.0
offset_right = 354.0

[node name="Resume" parent="BaseUI/PausePanel" index="2"]
offset_left = 189.0
offset_top = 128.0
offset_right = 351.0
offset_bottom = 191.0

[node name="DeathPanel" parent="BaseUI" instance=ExtResource("7_koalu")]
layout_mode = 0
offset_left = 360.0
offset_top = 108.0
offset_right = 849.0
offset_bottom = 495.0

[node name="Restart" parent="BaseUI/DeathPanel" index="1"]
layout_mode = 0
offset_left = 166.0
offset_top = 158.0
offset_right = 328.0
offset_bottom = 221.0

[node name="Quit" parent="BaseUI/DeathPanel" index="2"]
process_mode = 3

[node name="killcollect" type="Node2D" parent="BaseUI"]
position = Vector2(960, 16)

[node name="KillCount" parent="BaseUI/killcollect" instance=ExtResource("8_8jnex")]

[node name="goldcollect" type="Node2D" parent="BaseUI"]

[node name="GoldCount" parent="BaseUI/goldcollect" instance=ExtResource("9_2dvgq")]
offset_left = 1124.0
offset_top = 16.0
offset_right = 1162.0
offset_bottom = 44.0
scale = Vector2(0.998853, 1)

[node name="SelectUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_wikg1")

[node name="select_panel" parent="SelectUI" instance=ExtResource("11_2v7aq")]
layout_mode = 0
offset_left = 428.0
offset_top = 78.0
offset_right = 964.0
offset_bottom = 590.0

[connection signal="pressed" from="BaseUI/PausePanel/Menu" to="BaseUI" method="_on_menu_pressed"]
[connection signal="pressed" from="BaseUI/PausePanel/Resume" to="BaseUI" method="_on_resume_pressed"]
[connection signal="pressed" from="BaseUI/DeathPanel/Quit" to="BaseUI" method="_on_quit_pressed"]

[editable path="BaseUI/PausePanel"]
[editable path="BaseUI/DeathPanel"]
[editable path="SelectUI/select_panel"]
